RESOLVED FIXED53292
[GTK] Fix compilation warning
https://bugs.webkit.org/show_bug.cgi?id=53292
Summary [GTK] Fix compilation warning
Alejandro G. Castro
Reported 2011-01-28 02:39:48 PST
After r75955 we need to cast the number of pages: ../../../Source/WebKit/gtk/webkit/webkitwebframe.cpp: En la función ‘void draw_page_callback(GtkPrintOperation*, GtkPrintContext*, gint, void*)’: ../../../Source/WebKit/gtk/webkit/webkitwebframe.cpp:771:44: aviso: comparación entre expresiones enteras signed y unsigned
Attachments
Proposed patch (1.24 KB, patch)
2011-01-28 02:55 PST, Alejandro G. Castro
xan.lopez: review-
Proposed patch (1.24 KB, patch)
2011-01-28 04:14 PST, Alejandro G. Castro
xan.lopez: review+
Alejandro G. Castro
Comment 1 2011-01-28 02:55:06 PST
Created attachment 80434 [details] Proposed patch
WebKit Review Bot
Comment 2 2011-01-28 03:58:56 PST
Xan Lopez
Comment 3 2011-01-28 04:08:50 PST
Comment on attachment 80434 [details] Proposed patch You are missing the opening '(' it seems.
Alejandro G. Castro
Comment 4 2011-01-28 04:14:55 PST
Created attachment 80437 [details] Proposed patch Uploaded the wrong patch sorry.
Xan Lopez
Comment 5 2011-01-28 04:41:46 PST
Comment on attachment 80437 [details] Proposed patch r=me
Alejandro G. Castro
Comment 6 2011-01-28 06:36:06 PST
Note You need to log in before you can comment on or make changes to this bug.